--- a/requirements.txt
+++ b/requirements.txt
@@ -6,3 +6,7 @@ pandas==1.0.1
 psycopg2-binary==2.8.5
 SQLAlchemy==1.3.13
 sqldf==0.4.2
+json5==0.9.1
+Flask==1.1.1
+Flask-Cors==3.0.8
+gunicorn==20.0.4
